--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   fluttertoast: ^2.0.6
   dio: ^0.1.3  #latest version
+  transparent_image: 0.1.0
 
 dev_dependencies:
   flutter_test:
