--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
+      - assets/images/ic_no_avatar.png
       - assets/images/illustration_1.jpg
       - assets/images/illustration_2.jpg
       - assets/images/illustration_3.jpg
