--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   fluttertoast: ^2.0.6
   dio: ^0.1.3  #latest version
   transparent_image: 0.1.0
+  flutter_swiper : ^1.0.4
 
 dev_dependencies:
   flutter_test:
