--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   fluttertoast: ^2.0.6
-  dio: ^0.1.3  #latest version
+  dio: ^1.0.0 #latest version
   transparent_image: 0.1.0
   flutter_swiper : ^1.0.4
+  flutter_webview_plugin: ^0.1.4
 
 dev_dependencies:
   flutter_test:
