--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,16 @@ dependencies:
   transparent_image: 0.1.0
   flutter_swiper : ^1.0.4
   flutter_webview_plugin: ^0.1.4
+  json_annotation: ^1.0.0
+#  json_annotation: ^0.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^0.10.0
+  json_serializable: ^1.0.0
+#  build_runner: ^0.9.0
+#  json_serializable: ^0.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
