--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_webview_plugin: ^0.1.4
 #  json_annotation: ^1.0.0
   json_annotation: ^0.2.3
+  shared_preferences: ^0.4.2
+  sqflite: ^0.9.0
 
 dev_dependencies:
   flutter_test:
