--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
           weight: 200
   assets:
       - assets/images/ic_no_avatar.png
+      - assets/images/ic_next.png
       - assets/images/illustration_1.jpg
       - assets/images/illustration_2.jpg
       - assets/images/illustration_3.jpg
